-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 FF
-
Ubuntu20.04 x64
-
43ba45151a8769860c62c9dc5515910d94411bf9 (qt/qtbase/dev)
Install Qt6.2.0 binaries, gcc_64 used in this report, run qmake -query and check the output, QT_HOST_BINS and QT_HOST_LIBS seem to have incorrect path:
QT_HOST_BINS:/home/johanna/RTA/qt5/6.2.0/gcc_64/bin/bin
QT_HOST_LIBS:/home/johanna/RTA/qt5/6.2.0/gcc_64/bin/lib
| For Gerrit Dashboard: QTBUG-93707 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 349095,17 | Follow the generic logic of QLibraryInfo when computing QT_HOST_PREFIX | dev | qt/qtbase | Status: MERGED | +2 | 0 |